      elements more than that.

      \item \code{dist()} can produce dissimilarity objects for more
      than 65536 rows (but for example \code{cmdscale()} and
      \code{hclust()} cannot process such objects).

      \item \code{serialize()} to a raw vector is no longer limited in
      size on 64-bit platforms.

      \item The C-level function \code{R_alloc} can now allocate
      \eqn{2^{34}}{2^34} or more bytes on 64-bit platforms.

      \item \code{agrep()} and \code{grep()} will return double vectors
      of indices for long vector inputs.
      
      \item Many calls to \code{.C()} have been replaced by
      \code{.Call()} to allow long vectors to be supported (now or in
      the future).  Regrettably several packages had copied the non-API
      \code{.C()} calls and so fail.

      \item \code{.C()} and \code{.Fortran()} do not accept long vector
      inputs, at least for the time being.  This is a precaution as it
      is very unlikely that existing code will have be written to handle
      long vectors (and the \R wrappers often assume that
      \code{length(x)} is an integer).
      
      \item Many more basic operations are now interruptible when run on
      size-able vectors: typically interrupts are checked for every 1-100
      million elements.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} now gives a warning rather than a
      note if it finds calls to \code{abort}, \code{assert} or
      \code{exit} in compiled code, and has been able to find the
      \file{.o} file in which the calls occur.

      Such calls can terminate the \R process which loads the package.

      \item \command{R CMD check} now checks for \code{.C()},
      \code{.Call()}, \code{.External()} and \code{.Fortran()} calls in
      other packages, and gives a warning on those found from \R itself
      (which are not part of the API and change without notice).
      